# remora

./: .all-contributorsrc  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: .gitkeep
assets/: example-benchmark.yml  example-dynamic-ethereum-block-benchmark.yml  example-dynamic-load.yml  example-validator.yml  grafana-dashboard.json
docs/: architecture.md  setup.md
remora/: .gitignore  2  Cargo.toml
remora/assets/: example-benchmark-contention.yml  example-benchmark.yml  example-tpcc.yml  example-validator.yml  grafana-dashboard.json
remora/src/: config.rs  error.rs  lib.rs  load_generator.rs  metrics.rs
remora/src/checkpoint/: mod.rs  primary.rs  proxy.rs  state_collector.rs  storage.rs
remora/src/client/: hermes_schedule.rs  load_generator.rs  mod.rs  request_arrival_distribution.rs
remora/src/executor/: api.rs  calibration.rs  fake.rs  mod.rs  oneshot_dependency_controller.rs  sui.rs  versioned_dependency_controller.rs  worker_pool.rs
remora/src/executor/tpcc/: constants.rs  data.rs  executor.rs  generator.rs  transactions.rs
remora/src/networking/: chunking.rs  client.rs  mod.rs  worker.rs
remora/src/primary/: core.rs  decentralized_forwarder.rs  forwarder_test.rs  load_balancer.rs  mock_consensus.rs  mod.rs  node.rs  owned_obj_txn_forwarder.rs  owned_processors.rs  pause_barrier.rs  processors_tests.rs  shared_obj_txn_forwarder.rs  shared_processor.rs
remora/src/primary/elastic_scaler/: mod.rs  retirement_coordinator.rs
remora/src/proxy/: core.rs  decentralized_scheduler.rs  mod.rs  node.rs
remora/src/recovery/: mod.rs  test_bridging.rs  test_recovery.rs
remora/tests/: common_case.rs
scripts/: plot_rsds_bench.py  plot_version_assignment_bench.py
src/: config.rs  error.rs  lib.rs  metrics.rs
src/checkpoint/: proxy.rs  storage.rs
src/client/: hermes_schedule.rs  mod.rs  request_arrival_distribution.rs
src/executor/: api.rs  fake.rs  mod.rs  oneshot_dependency_controller.rs  stateless_crypto.rs  sui.rs  versioned_dependency_controller.rs
src/executor/tpcc/: executor.rs  generator.rs  mod.rs  transactions.rs
src/networking/: client.rs  mod.rs  server.rs  stats.rs  worker.rs
src/primary/: batch_breakdown.rs  decentralized_forwarder.rs  forwarder_test.rs  load_balancer.rs  mock_consensus.rs  mod.rs  node.rs  owned_obj_txn_forwarder.rs  rsds_bench_test.rs  shared_obj_txn_forwarder.rs  version_assignment_bench_test.rs
src/primary/elastic_scaler/: mod.rs  retirement_coordinator.rs  retirement_event.rs
src/proxy/: core.rs  mod.rs  network_stats.rs  node.rs
src/recovery/: mod.rs
tests/: common_case.rs
