[package]
name = "remora"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crates.io dependencies
tokio = { version = "1.28.1", features = ["full"] }
anyhow = { version = "1.0.64", features = ["backtrace"] }
git-version = "0.3.5"
const-str = "0.5.3"
futures = "0.3.23"
bytes = "1.0.1"
prometheus = "0.13"
tracing = "0.1.36"
dashmap = { version = "5.4.0", features = ["inline"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.71"
bincode = "1.3.3"
tokio-util = "0.7.9"
axum = "0.6.20"
hyper = "0.14.27"
reqwest = "0.11.22"
sha3 = "0.10.8"
better_any = "0.2.0"
itertools = "0.13.0"
tracing-subscriber = "0.3.18"
rand = "0.8.4"
rand_distr = "0.4.3"
rand_mt = "4.2.2"
serde_yaml = "0.9.21"
thiserror = "1.0.63"
petgraph = "0.6.4"
fail = "0.4.0"
rustc-hash = "2.0.0"
fastrand = "2.3.0"
core_affinity = "0.8"

# These are crates.io packages (NOT in sui repo)
bcs = "0.1.4"
parking_lot = "0.12.1"
clap = { version = "4.4", features = ["derive"] }
num_cpus = "1.15.0"
byteorder = "1.4.3"

prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser.git", rev = "75334db" }

# Sui crates - from sui repo
sui-transaction-checks = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
sui-config = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
sui-types = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
sui-core = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
sui-node = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
sui-single-node-benchmark = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
sui-protocol-config = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
sui-adapter-latest = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc", package = "sui-adapter-latest" }
sui-move-natives = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc", package = "sui-move-natives-latest" }
sui-archival = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
mysten-metrics = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
typed-store = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }

# Move crates - from sui repo (external-crates/move/)
move-vm-runtime = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
move-binary-format = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
move-core-types = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }
move-bytecode-utils = { git = "https://github.com/Scofield626/sui.git", branch = "tpcc" }

[dev-dependencies]
tracing-test = "0.2.5"

[features]
benchmark = []
